log

Mon 11 Mar 2024 05:07:43 PM UTC: 
 tests:  0|7
total_score: 0/70
2deb2bb
Mon 11 Mar 2024 05:15:49 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:14:1: error: expected identifier or ‘(’ before ‘for’
   14 | for (int i = 0; i < size; i++)
      | ^~~
exercises.c:14:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   14 | for (int i = 0; i < size; i++)
      |                   ^
exercises.c:14:28: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   14 | for (int i = 0; i < size; i++)
      |                            ^~
Compilation failed
d8522f5
Mon 11 Mar 2024 05:17:15 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
test.c: In function ‘findMax’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7e351f1
Mon 11 Mar 2024 05:23:16 PM UTC: 
 exercises.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:20:26: error: expected statement before ‘)’ token
   20 |         if (arr[i] > max))
      |                          ^
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c8b542
Mon 11 Mar 2024 05:24:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘findMax’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
74b2149
Mon 11 Mar 2024 05:41:46 PM UTC: 
 exercises.c | 29 +++++++++++++----------------
 1 file changed, 13 insertions(+), 16 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:23:12: error: expected identifier or ‘(’ before ‘=’ token
   23 |   for (int = 0; i < size / 2; i++)
      |            ^
exercises.c:23:17: error: ‘i’ undeclared (first use in this function)
   23 |   for (int = 0; i < size / 2; i++)
      |                 ^
exercises.c:23:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5fb5a1d
